added interactor; added adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 	<string name="viewer_delete_btn">Удалить</string>
 	<string name="viewer_add_btn">Добавить</string>
 	<string name="viewer_edit_btn">Изменить</string>
+	<string name="not_fount_orders">Текущих заказов нет</string>
 </resources>
