--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
 	<string name="order_cpu_hint">CPU: Intel Core i</string>
 	<string name="order_gpu_hint">Видео карта</string>
 	<string name="order_ram_hint">Оперативная память</string>
+	<string name="order_storage_hint">Накопитель</string>
 	<string name="order_create_btn">Создать заявку</string>
 	<string name="check_fields">Нужно заполнить все поля!</string>
 	<string name="invalid_ram_field">Не верно введен размер накопителя</string>
