Added sms list screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
 	<string name="app_name">Pc Config</string>
+
+	<string name="not_found_sms">Итория пуста</string>
+
 	<string name="viewer_delete_btn">Удалить</string>
 	<string name="viewer_add_btn">Добавить</string>
 	<string name="viewer_edit_btn">Изменить</string>
