--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
 	<string name="app_name">Pc Config</string>
 
 	<string name="not_found_sms">Иcтория пуста</string>
+	<string name="empty_phone_error">Номер телефона не может быть пустым!</string>
+	<string name="send_sms_success">Отправлено!</string>
+	<string name="send_sms_success_permition_denied">Без этого разрешения, нельзя =(</string>
 </resources>
